--- a/src/css/main.css
+++ b/src/css/main.css
@@ -324,6 +324,16 @@ body {
   width: 53%;
   background-color: rgba(34, 66, 115, 0.77);
 }
+@media screen and (min-width: 768px) {
+  .recoverySection::after {
+    width: 44%;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .recoverySection::after {
+    width: 45%;
+  }
+}
 
 .recoveryWrap {
   padding: 10px 10px 20px 5px;
@@ -377,6 +387,26 @@ body {
   line-height: calc( 0.015625 * 100vw + 2px );
   text-align: center;
   color: #000000;
+}
+@media screen and (min-width: 768px) {
+  .recoveryText {
+    width: 320px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .recoveryText {
+    width: 400px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .recoveryText {
+    width: 500px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  .recoveryText {
+    width: 600px;
+  }
 }
 
 .recoveryTextWrap {
@@ -520,6 +550,21 @@ body {
 .crmScriptWrap {
   width: 100%;
   max-width: 600px;
+}
+@media screen and (min-width: 768px) {
+  .crmScriptWrap {
+    margin-right: 40px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .crmScriptWrap {
+    margin-right: 60px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .crmScriptWrap {
+    margin-right: 100px;
+  }
 }
 
 .b24-form-wrapper {
