--- a/src/scss/sections/_crm.scss
+++ b/src/scss/sections/_crm.scss
@@ -62,6 +62,16 @@
 .crmScriptWrap {
   width: 100%;
   max-width: 600px;
+  @media screen and (min-width: 768px){
+    margin-right: 40px;
+  }
+  @media screen and (min-width: 1024px){
+    margin-right: 60px;
+  }
+  @media screen and (min-width: 1280px){
+    margin-right: 100px;
+  }
+  
 }
 
 // FONTS
