--- a/src/css/main.css
+++ b/src/css/main.css
@@ -211,6 +211,11 @@ body {
 .headerContent {
   width: 75%;
 }
+@media screen and (min-width: 1280px) {
+  .headerContent {
+    width: 80%;
+  }
+}
 
 .headerContactsWrap1 {
   margin-bottom: 5px;
