--- a/src/scss/sections/_crm.scss
+++ b/src/scss/sections/_crm.scss
@@ -23,6 +23,9 @@
   height: 1px;
   width: 53%;
   background-color: $brandTextColor;
+  @media screen and (min-width: 768px){
+    width: calc(50% - 10px);
+  }
 }
 
 .crmTitle {
