--- a/src/scss/sections/_identification.scss
+++ b/src/scss/sections/_identification.scss
@@ -54,7 +54,9 @@
 }
 
 .identificationButtonText {
+  margin: 0 auto;
   padding: 5px;
+  width: 60%;
   font-family: "Kodchasan", sans-serif;
   font-weight: 400;
   font-size: 10px;
@@ -65,6 +67,15 @@
   color: $additionalTextColor;
   background-color: $brandTextColor;
   border-radius: 20px;
+  @media screen and (min-width: 768px){
+    padding: 10px;
+  }
+  @media screen and (min-width: 1280px){
+    padding: 15px;
+  }
+  @media screen and (min-width: 1600px){
+    padding: 20px;
+  }
 }
 
 .identificationText {
