--- a/src/css/main.css
+++ b/src/css/main.css
@@ -559,6 +559,7 @@ body {
   max-width: unset !important;
   width: 100% !important;
   padding: 5px !important;
+  border-radius: unset !important;
 }
 @media screen and (min-width: 768px) {
   .b24-form-wrapper {
